# aoc2023

./: .gitignore  README.md  check.sh  decrypt-inputs.sh  fetch-inputs.sh  flake.nix  skel.sh
.github/workflows/: main.yml
checker/: Cargo.toml
checker/src/: main.rs
day01/: README.md
day01/code/: main.bqn
day01/in/: part1.txt.asc  part2.txt.asc
day01/scripts/: run.sh
day02/: README.md
day02/code/: main.jq
day02/in/: part1.txt.asc  part2.txt.asc
day02/scripts/: build.sh  run.sh
day03/: README.md
day03/code/: main.vim
day03/in/: part1.txt.asc  part2.txt.asc
day03/scripts/: run.sh
day04/: README.md
day04/code/: main.nix  main.sql
day04/in/: part1.txt.asc  part2.txt.asc
day04/scripts/: run.sh
day05/: README.md
day05/code/: main.ml
day05/in/: part1.txt.asc  part2.txt.asc
day05/scripts/: build.sh
day06/: README.md
day06/code/: main.asm
day06/in/: part1.txt.asc  part2.txt.asc
day06/scripts/: build.sh  run.sh
day07/: README.md
day07/code/: main.pl
day07/in/: part1.txt.asc  part2.txt.asc
day07/scripts/: build.sh  run.sh
day08/: README.md
day08/code/: main.cbl
day08/in/: part1.txt.asc  part2.txt.asc
day09/: README.md
day10/: README.md
day11/: README.md
day12/: README.md
day13/: README.md
day14/: README.md
day15/: README.md
day16/: README.md
day17/: README.md
day18/: README.md
day19/: README.md
day19/code/: day19.cabal
day19/code/app/: Main.hs  Parser.hs  Types.hs
day20/: README.md
day21/: README.md
day22/: README.md
day23/: README.md
day24/: README.md
day25/: README.md
(+78 files in other folders)
